# vertector-semantic-cache

./: .env  ENVIRONMENT_SETUP.md  README.md  activate.sh  docker-compose.yml  pyproject.toml  redis.conf  requirements.txt  setup.sh
docs/: ADVANCED_CACHING.md  APP_NAME_INVESTIGATION.md  GOOGLE_ADK_APP_NAME_FIX.md  INDEX.md  OBSERVABILITY.md  PROGRESS_SUMMARY.md
examples/: __init__.py  basic_usage.py  batch_operations_example.py  context_aware_example.py  google_adk_example.py  l1_l2_cache_example.py  langchain_example.py  observability_example.py  stale_refresh_callback_example.py  staleness_example.py  tag_invalidation_example.py
src/semantic_cache/: __init__.py
src/semantic_cache/core/: __init__.py  cache_manager.py  config.py  l1_cache.py  metrics.py  tag_manager.py
src/semantic_cache/integrations/: __init__.py  google_adk.py  langchain.py
src/semantic_cache/observability/: __init__.py  tracing.py
src/semantic_cache/rerankers/: __init__.py  factory.py
src/semantic_cache/utils/: __init__.py  batch.py  logging.py
src/semantic_cache/vectorizers/: __init__.py  factory.py
src/vertector_semantic_cache/: __init__.py
src/vertector_semantic_cache/core/: __init__.py  cache_manager.py  l1_cache.py  metrics.py  tag_manager.py
src/vertector_semantic_cache/integrations/: __init__.py  google_adk.py  langchain.py
src/vertector_semantic_cache/mcp/: __init__.py  server.py
src/vertector_semantic_cache/observability/: __init__.py  tracing.py
src/vertector_semantic_cache/rerankers/: __init__.py  factory.py
src/vertector_semantic_cache/utils/: __init__.py  exceptions.py  logging.py
src/vertector_semantic_cache/vectorizers/: __init__.py  factory.py
